--- a/cameralibrary/src/main/AndroidManifest.xml
+++ b/cameralibrary/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fluper.cameralibrary" />
+    package="com.infoskillstechnology.cameralibrary" />
